# tarea-2-os

./: .gitignore  README.md
client/: Dockerfile  package-lock.json  package.json  tsconfig.json
client/src/: index.ts
client/src/Views/: index.html  main.ts  request.ts
server/: CMakeLists.txt  build.sh  compile.sh  config.conf  server.h  test  test.c
server/cmake-modules/: FindLibConfig.cmake  FindUlfius.cmake
server/include/: config.h  constants.h  helpers.h  http_server.h  processing.h  server.h  stb_image.h  ulfius_server.h
server/src/: config.c  helpers.c  http_server.c  main.c  processing.c  server.c  ulfius_server.c
